@@ -73,11 +73,7 @@ public class EnumToStringConverter implements ConditionalGenericConverter {
 
 	@Override
 	public Set<ConvertiblePair> getConvertibleTypes() {
-		Set<ConvertiblePair> pairSet = new HashSet<>(3);
-		pairSet.add(new ConvertiblePair(Enum.class, String.class));
-		pairSet.add(new ConvertiblePair(Enum.class, Integer.class));
-		pairSet.add(new ConvertiblePair(Enum.class, Long.class));
-		return Collections.unmodifiableSet(pairSet);
+		return Set.of(new ConvertiblePair(Enum.class, String.class), new ConvertiblePair(Enum.class, Integer.class), new ConvertiblePair(Enum.class, Long.class));
 	}
 
 	@Nullable
@@ -109,11 +105,9 @@ public class EnumToStringConverter implements ConditionalGenericConverter {
 	private static Object invoke(Class<?> clazz, AccessibleObject accessibleObject, Object source, Class<?> targetClazz)
 		throws IllegalAccessException, InvocationTargetException {
 		Object value = null;
-		if (accessibleObject instanceof Field) {
-			Field field = (Field) accessibleObject;
+		if (accessibleObject instanceof Field field) {
 			value = field.get(source);
-		} else if (accessibleObject instanceof Method) {
-			Method method = (Method) accessibleObject;
+		} else if (accessibleObject instanceof Method method) {
 			Class<?> paramType = method.getParameterTypes()[0];
 			// 类型转换
 			Object object = ConvertUtil.convert(source, paramType);
