@@ -23,8 +23,6 @@ import org.springframework.boot.autoconfigure.cache.CacheManagerCustomizers;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
 import org.springframework.context.annotation.Bean;
 
-import java.util.stream.Collectors;
-
 /**
  * CacheManagerCustomizers 配置
  *
@@ -37,6 +35,6 @@ public class RedisCacheManagerConfig {
 	@Bean
 	public CacheManagerCustomizers cacheManagerCustomizers(
 		ObjectProvider<CacheManagerCustomizer<?>> customizerObjectProvider) {
-		return new CacheManagerCustomizers(customizerObjectProvider.orderedStream().collect(Collectors.toList()));
+		return new CacheManagerCustomizers(customizerObjectProvider.orderedStream().toList());
 	}
 }
